@@ -1,5 +1,5 @@
 /***************************************************************************
-    Copyright (C) 2009 Robby Stephenson <robby@periapsis.org>
+    Copyright (C) 2009-2018 Robby Stephenson <robby@periapsis.org>
  ***************************************************************************/
 
 /***************************************************************************
@@ -22,6 +22,8 @@
  *                                                                         *
  ***************************************************************************/
 
+#include <config.h> // for TELLICO_VERSION
+
 #include "musicbrainzfetcher.h"
 #include "../translators/xslthandler.h"
 #include "../translators/tellicoimporter.h"
@@ -31,6 +33,7 @@
 #include "../collection.h"
 #include "../entry.h"
 #include "../utils/datafileregistry.h"
+#include "../utils/xmlhandler.h"
 #include "../tellico_debug.h"
 
 #include <KLocalizedString>
@@ -50,7 +53,7 @@
 
 namespace {
   static const int MUSICBRAINZ_MAX_RETURNS_TOTAL = 10;
-  static const char* MUSICBRAINZ_API_URL = "http://musicbrainz.org/ws/1/";
+  static const char* MUSICBRAINZ_API_URL = "https://musicbrainz.org/ws/2/";
 }
 
 using namespace Tellico;
@@ -92,34 +95,27 @@ void MusicBrainzFetcher::continueSearch() {
 
 void MusicBrainzFetcher::doSearch() {
   QUrl u(QString::fromLatin1(MUSICBRAINZ_API_URL));
-  QUrlQuery q;
-  q.addQueryItem(QLatin1String("type"), QLatin1String("xml"));
-  q.addQueryItem(QLatin1String("limit"), QString::number(m_limit));
-  q.addQueryItem(QLatin1String("offset"), QString::number(m_offset));
+  // all searches are for musical releases since Tellico only tracks albums
+  u.setPath(u.path() + QLatin1String("release"));
 
-  QString queryPath;
+  QString queryString;
   switch(request().key) {
     case Title:
-      queryPath = QLatin1String("/release/");
-      q.addQueryItem(QLatin1String("title"), request().value);
+      queryString = QString::fromLatin1("release:\"%1\"").arg(request().value);
       break;
 
     case Person:
-      queryPath = QLatin1String("/release/");
-      q.addQueryItem(QLatin1String("artist"), request().value);
+      queryString = QString::fromLatin1("artist:\"%1\"").arg(request().value);
       break;
 
     case Keyword:
-      queryPath = QLatin1String("/release/");
-      q.addQueryItem(QLatin1String("query"), QLatin1String("artist:\"") + request().value + QLatin1String("\" OR ") +
-                                             QLatin1String("release:\"") + request().value + QLatin1String("\" OR ")  +
-                                             QLatin1String("track:\"") + request().value + QLatin1String("\" OR ") +
-                                             QLatin1String("label:\"") + request().value + QLatin1String("\""));
+      queryString = QLatin1String("artist:\"") + request().value + QLatin1String("\" OR ") +
+                    QLatin1String("release:\"") + request().value + QLatin1String("\" OR ")  +
+                    QLatin1String("label:\"") + request().value + QLatin1String("\"");
       break;
 
     case Raw:
-      queryPath = QLatin1String("/release/");
-      q.addQueryItem(QLatin1String("query"), request().value);
+      queryString = request().value;
       break;
 
     default:
@@ -127,13 +123,19 @@ void MusicBrainzFetcher::doSearch() {
       stop();
       return;
   }
+  QUrlQuery q;
+  q.addQueryItem(QLatin1String("query"), queryString);
+  q.addQueryItem(QLatin1String("limit"), QString::number(m_limit));
+  q.addQueryItem(QLatin1String("offset"), QString::number(m_offset));
+  q.addQueryItem(QLatin1String("fmt"), QLatin1String("xml"));
   u.setQuery(q);
-  u = u.adjusted(QUrl::StripTrailingSlash);
-  u.setPath(u.path() + queryPath);
 //  myDebug() << "url: " << u.url();
 
   m_requestTime.start();
   m_job = KIO::storedGet(u, KIO::NoReload, KIO::HideProgressInfo);
+  // see https://musicbrainz.org/doc/XML_Web_Service/Rate_Limiting#Provide_meaningful_User-Agent_strings
+  m_job->addMetaData(QLatin1String("UserAgent"), QString::fromLatin1("Tellico/%1 ( http://tellico-project.org )")
+                                                                .arg(QLatin1String(TELLICO_VERSION)));
   KJobWidgets::setWindow(m_job, GUI::Proxy::widget());
   connect(m_job, SIGNAL(result(KJob*)),
           SLOT(slotComplete(KJob*)));
@@ -182,11 +184,11 @@ void MusicBrainzFetcher::slotComplete(KJob* ) {
   if(m_total == -1) {
     QDomDocument dom;
     if(!dom.setContent(data, false)) {
-      myWarning() << "server did not return valid XML.";
+      myWarning() << "server did not return valid XML:" << data;
       stop();
       return;
     }
-    // total is /resp/fetchresults/@numResults
+    // total is /metadata/release-list/@count
     QDomNode n = dom.documentElement().namedItem(QLatin1String("release-list"));
     QDomElement e = n.toElement();
     if(!e.isNull()) {
@@ -253,8 +255,8 @@ Tellico::Data::EntryPtr MusicBrainzFetcher::fetchEntryHook(uint uid_) {
   QUrl u(QString::fromLatin1(MUSICBRAINZ_API_URL));
   u.setPath(u.path() + QLatin1String("release/") + mbid);
   QUrlQuery q;
-  q.addQueryItem(QLatin1String("type"), QLatin1String("xml"));
-  q.addQueryItem(QLatin1String("inc"), QLatin1String("artist tracks release-events release-groups labels tags url-rels"));
+  q.addQueryItem(QLatin1String("fmt"), QLatin1String("xml"));
+  q.addQueryItem(QLatin1String("inc"), QLatin1String("artists+recordings+release-groups+labels+url-rels"));
   u.setQuery(q);
 //  myDebug() << u;
 
@@ -263,8 +265,15 @@ Tellico::Data::EntryPtr MusicBrainzFetcher::fetchEntryHook(uint uid_) {
     QThread::msleep(300);
   }
   m_requestTime.start();
-  // quiet
-  QString output = FileHandler::readXMLFile(u, true);
+
+  KIO::StoredTransferJob* dataJob = KIO::storedGet(u, KIO::NoReload, KIO::HideProgressInfo);
+  dataJob->addMetaData(QLatin1String("UserAgent"), QString::fromLatin1("Tellico/%1 ( http://tellico-project.org )")
+                                                                .arg(QLatin1String(TELLICO_VERSION)));
+  if(!dataJob->exec()) {
+    myDebug() << "Failed to load" << u;
+    return entry;
+  }
+  const QString output = XMLHandler::readXMLData(dataJob->data());
 #if 0
   myWarning() << "Remove output debug from musicbrainzfetcher.cpp";
   QFile f(QLatin1String("/tmp/test2.xml"));
@@ -318,8 +327,6 @@ void MusicBrainzFetcher::initXSLTHandler() {
 }
 
 Tellico::Fetch::FetchRequest MusicBrainzFetcher::updateRequest(Data::EntryPtr entry_) {
-//  myDebug();
-
   const QString title = entry_->field(QLatin1String("title"));
   const QString artist = entry_->field(QLatin1String("artist"));
   if(artist.isEmpty() && !title.isEmpty()) {
@@ -327,7 +334,7 @@ Tellico::Fetch::FetchRequest MusicBrainzFetcher::updateRequest(Data::EntryPtr en
   } else if(title.isEmpty() && !artist.isEmpty()) {
     return FetchRequest(Person, artist);
   } else if(!title.isEmpty() && !artist.isEmpty()) {
-    return FetchRequest(Raw, QLatin1String("release:") + title + QLatin1String(" AND artist:") + artist);
+    return FetchRequest(Raw, QString::fromLatin1("release:\"%1\" AND artist:\"%2\"").arg(title, artist));
   }
   return FetchRequest();
 }
