@@ -1,3 +1,7 @@
+2018-01-30  Robby Stephenson  <robby@periapsis.org>
+
+	* Updated MusicBrainz data source to Web Service v2.
+
 2018-01-15  Robby Stephenson  <robby@periapsis.org>
 
 	* Released Tellico 3.1.1.
